[package]
name = "openfhe"
version = "0.1.4"
edition = "2021"
description = "Rust package of the OpenFHE Fully Homomorphic Encryption Library."
license = "BSD-2-Clause"
documentation = "https://fair-math.gitbook.io/docs/"
repository = "https://github.com/fairmath/openfhe-rs"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

